Inserción de frase en el encabezado

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Lista de chequeo</title>
+
 </head>
 <body>
+    <header>
+        <h1> ¡No hay cosas imposibles, solo Hagamoslo!</h1>
+    </header>
     <div class="Lista">
         <h2>Lista de Actividades</h2>
         <label>
@@ -30,6 +34,7 @@
             <span><a href="#" target="_blank">No morirme de hambre</a></span>
         </label>
     </div>
-    
+
+ </header>   
 </body>
 </html>
