Cambio Titulo-Imagen-lista de chequeo

--- a/index.html
+++ b/index.html
@@ -5,36 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Lista de chequeo</title>
-
 </head>
 <body>
-    <header>
-        <h1> ¡No hay cosas imposibles, solo Hagamoslo!</h1>
-    </header>
-    <div class="Lista">
-        <h2>Lista de Actividades</h2>
-        <label>
-            <input type="checkbox" name="">
-            <i></i>
-            <span><a href="https://www.youtube.com" target="_blank">Ver YouTube</a></span>
-        </label>
-        <label>
-            <input type="checkbox" name="">
-            <i></i>
-            <span><a href="#" target="_blank">Hacer tareas</a></span>
-        </label>
-        <label>
-            <input type="checkbox" name="">
-            <i></i>
-            <span><a href="#" target="_blank">Revisar la plataforma</a></span>
-        </label>
-        <label>
-            <input type="checkbox" name="">
-            <i></i>
-            <span><a href="#" target="_blank">No morirme de hambre</a></span>
-        </label>
+    <div class="Contenedor"> 
+        <div class="cajatexto">   
+            <h1> ¡No hay cosas imposibles, solo Hombres y Mujeres incapaces!</h1>
+        </div>
+        <div class="cajaContenido">
+            <div class="cajaImagen">
+                <img src="FormacionCCA.png" alt="Coraje">
+            </div>
+            <div class="Lista">
+                <h2>Lista de Actividades</h2>
+                <label>
+                    <input type="checkbox" name="">
+                    <i></i>
+                    <span><a href="https://www.youtube.com" target="_blank">Ver YouTube</a></span>
+                </label>
+                <label>
+                    <input type="checkbox" name="">
+                    <i></i>
+                    <span><a href="#" target="_blank">Hacer tareas</a></span>
+                </label>
+                <label>
+                    <input type="checkbox" name="">
+                    <i></i>
+                    <span><a href="#" target="_blank">Revisar la plataforma</a></span>
+                </label>
+                <label>
+                    <input type="checkbox" name="">
+                    <i></i>
+                    <span><a href="#" target="_blank">No morirme de hambre</a></span>
+                </label>
+            </div>
+        </div>
     </div>
-
- </header>   
 </body>
 </html>
