creacion de caracter.html sin scrib

--- a/Caracter.html
+++ b/Caracter.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Lista de chequeo</title>
+    <title>Formación</title>
 </head>
 <body>
     <div class="Contenedor"> 
         <div class="cajatexto">   
-            <h1> ¡No hay cosas imposibles, solo Hombres y Mujeres incapaces!</h1>
+            <h1> ¡Insistir, Persistir pero nunca desistir!</h1>
         </div>
         <div class="cajaContenido">
             <div class="cajaImagen">
-                <img id="imagenPrincipal" src="imagenes/FormacionCCA.png" alt="Coraje">
+                <img id="imagenPrincipal" src="imagenes/segruidad.jpg" alt="Coraje">
             </div>
             <div class="Lista">
                 <h2 id="tituloLista">Ingresa</h2>
                 <label>
                     <input type="checkbox" name="">
                     <i></i>
-                    <span><a href="index.html" target="_blank">Formacion</a></span>
+                    <span><a href="" target="_blank">Formacion</a></span>
                 </label>
                 <label>
                     <input type="checkbox" name="">
                     <i></i>
-                    <span><a href="Caracter.html" target="_blank">Caracter</a></span>
+                    <span><a href="#" target="_blank">Caracter</a></span>
                 </label>
                 <label>
                     <input type="checkbox" name="">
@@ -40,18 +40,5 @@
             </div>
         </div>
     </div>
-
-    <script>
-        const tituloLista = document.getElementById("tituloLista");
-        const imagenPrincipal = document.getElementById("imagenPrincipal");
-
-        tituloLista.addEventListener("mouseover", () => {
-            imagenPrincipal.src = "imagenes/ingreso.jpg"; 
-        });
-
-        tituloLista.addEventListener("mouseout", () => {
-            imagenPrincipal.src = "imagenes/FormacionCCA.png"; 
-        });
-    </script>
 </body>
 </html>
