Creación de enlace con  lista esfuerzo y enlace entre index.html-Caracter.html

--- a/Caracter.html
+++ b/Caracter.html
@@ -25,12 +25,12 @@
                 <label>
                     <input type="checkbox" name="">
                     <i></i>
-                    <span><a href="#" target="_blank">Caracter</a></span>
+                    <span><a href="Caracter.html" target="_blank">Caracter</a></span>
                 </label>
                 <label>
                     <input type="checkbox" name="">
                     <i></i>
-                    <span><a href="#" target="_blank">Esfuerzo</a></span>
+                    <span><a href="https://www.youtube.com/shorts/yfF8S3ScXAk" target="_blank">Esfuerzo</a></span>
                 </label>
                 <label>
                     <input type="checkbox" name="">
