--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <label>
                     <input type="checkbox" name="">
                     <i></i>
-                    <span><a href="#" target="_blank">Esfuerzo</a></span>
+                    <span><a href="https://www.youtube.com/shorts/yfF8S3ScXAk" target="_blank">Esfuerzo</a></span>
                 </label>
                 <label>
                     <input type="checkbox" name="">
