Correccion de signos de puntiacion de codigo css

--- a/Caracter.html
+++ b/Caracter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styleCaracter.css">
-    <title>Formación</title>
+    <title>Caracter</title>
 </head>
 <body>
     <div class="Contenedor"> 
@@ -20,12 +20,13 @@
                 <label>
                     <input type="checkbox" name="">
                     <i></i>
-                    <span><a href="index.html" target="_blank">Formacion</a></span>
+                    <span><a href="index.html" target="_self">Formacion</a></span>
                 </label>
                 <label>
                     <input type="checkbox" name="">
                     <i></i>
-                    <span><a href="Caracter.html" target="_blank">Caracter</a></span>
+                    <span><a href="Caracter.html" target="_self">Caracter</a></span>
+                    <p>Haz clic en la imagen para iniciar el video.</p>
                 </label>
                 <label>
                     <input type="checkbox" name="">
@@ -35,7 +36,7 @@
                 <label>
                     <input type="checkbox" name="">
                     <i></i>
-                    <span><a href="#" target="_blank">Compromiso</a></span>
+                    <span><a href="#" target="_self">Compromiso</a></span>
                 </label>
             </div>
         </div>
